Predictions using train dataset

--- a/Training_an_iris_dataset.ipynb
+++ b/Training_an_iris_dataset.ipynb
@@ -28,7 +28,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data=pd.read_excel(\"iris-train.xlsx\")\n"
+    "\n",
+    "\n"
    ]
   },
   {
@@ -751,13 +752,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ed42425e-a1ee-4bd8-9edf-3a6ea099417d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Iris-setosa'], dtype=object)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "1fa92a75-5c1e-4807-961e-5b97a8dc349c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p"
+    "data=pd.read_excel(\"iris-test.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8de6d0fe-1a4d-4f19-a7bc-1a9eebb8626d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test=data.iloc[:,:-1]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "b80976f3-258c-4639-84f9-35df831ab88a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\haide\\anaconda3\\Lib\\site-packages\\sklearn\\utils\\validation.py:2739: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions=model.predict(x_test.values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d53f6867-324a-4d11-95b8-b3cfedf55fbf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Iris-versicolor', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-versicolor', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-setosa', 'Iris-versicolor', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-setosa', 'Iris-setosa', 'Iris-versicolor',\n",
+       "       'Iris-versicolor', 'Iris-setosa', 'Iris-setosa', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-versicolor', 'Iris-versicolor', 'Iris-setosa',\n",
+       "       'Iris-setosa', 'Iris-setosa'], dtype=object)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6739c63-e252-450f-9710-2e3cbb0f1be9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa61385-8ed1-4f39-857f-b849e83e7b42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7abd921-c005-4117-a00f-4bacbbaeea13",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
